components/consumer/mobile/text-area/style.scss
@import '../../shared/scss/styleguide';
.pbg-consumer-mobile {
  &.pbg-form-field {
    &.pbg-text-field {
      &.pbg-text-area {

        textarea {
          display: block;
          border: 1px solid $grey-50;
          border-radius: 4px;
          padding: 9px 7px;
          color: $grey-80;
          background: $white;
          line-height: 20px;
          font-size: 14px;
          outline: 0;
          resize: none;
          width: 100%;
          overflow: hidden;
          height: auto;

          &::placeholder {
            color: $grey-60;
            font-family: Roboto;
            font-style: normal;
            font-weight: normal;
            line-height: 20px;
            font-size: 14px;
          }
          &:focus {
            outline: none;
          }
        }

        &.pbg-form-field-focused {
          textarea {
            border-color: $blue-60;
          }
        }

        &.pbg-form-field-error {
          textarea {
            border-color: $coral-error;
          }
        }

        &.pbg-form-field-disabled {
          textarea {
            @extend .pbg-desktop-form-field-disabled;
          }
        }

        .pbg-hint {
          font-style: normal;
        }
      }
    }
  }
}

